modified:   greetings.ipynb

--- a/greetings.ipynb
+++ b/greetings.ipynb
@@ -7,8 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#name = input(\"What is your name? \")\n",
+    "#print(f\"Goodbye, {name}!\") # NOTE: it says \"Goodbye\" here\n",
+    "#Now I'll add something here\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
     "name = input(\"What is your name? \")\n",
-    "print(f\"Goodbye, {name}!\") # NOTE: it says \"Goodbye\" here"
+    "hour = datetime.now().time().hour\n",
+    "greeting = \"Good morning\" if 4 <= hour < 12 else \"Good afternoon\" if 12 <= hour < 16 else \"Good night\"\n",
+    "print(f\"{greeting}, {name}!\")"
    ]
   }
  ],
@@ -28,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
